examples/exp/SmallExp/ZnumtheorySmallNoITEOrFastOp.txt
1 subgoal
  
  a, b : Z
  ============================
  (a | b) -> (a | - b)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  a, b : Z
  ============================
  (a | - b) -> (a | b)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  a, b : Z
  ============================
  (a | b) -> (- a | b)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  a, b : Z
  ============================
  (- a | b) -> (a | b)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  a, b : Z
  ============================
  (Z.abs a | b) -> (a | b)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  a, b : Z
  ============================
  (a | b) -> (Z.abs a | b)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  x, y : Z
  ============================
  x >= 0 -> x * y = 1 -> x = 1
The command has indeed failed with message:
Solver error: (error A non-linear fact was asserted to arithmetic in a linear logic.
The fact in question: (= (* op_1 op_0) 1)
 ).
1 subgoal
  
  ============================
  forall a b : Z, b <> 0 -> a mod b = 0 -> (b | a)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  forall a b : Z, (b | a) -> a mod b = 0
The command has indeed failed with message:
Could not reconstruct abduct
1 subgoal
  
  x, y : Z
  ============================
  x < y -> y <> x
The command has indeed failed with message:
CVC4 returned UNSAT, try the smt tactic instead.
1 subgoal
  
  ============================
  forall a b : Z, 0 <= a -> 0 < b -> (a | b) -> a <= b
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

a <= b
a <= 1
a + b <= 1
1 subgoal
  
  ============================
  forall a b d : Z, Zis_gcd a b d -> Zis_gcd b a d
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  forall a : Z, Zis_gcd a 0 a
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  forall a : Z, Zis_gcd a 1 1
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  forall a : Z, Zis_gcd a a a
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  forall a b d : Z, Zis_gcd a (- b) d -> Zis_gcd b a d
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  forall a b d : Z, Zis_gcd a b d -> Zis_gcd b a (- d)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  forall a b : Z, rel_prime a b -> Bezout a b 1
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  ============================
  ~ prime 0
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  p : Z
  ============================
  prime p -> 2 <= p
The command has indeed failed with message:
cvc5 returned SAT. The goal is invalid, but one of the following hypotheses would allow cvc5 to prove the goal:

3 = p
0 <= -3 + p
3 <= p + p
1 subgoal
  
  ============================
  forall p q r : Z, (p | q) -> (p | r) -> (p | Z.gcd q r)
The command has indeed failed with message:
Anomaly
"Uncaught exception Failure("Verit.tactic: can only deal with equality over bool")."
Please report at http://coq.inria.fr/bugs/.
1 subgoal
  
  a, b, c : Z
  ============================
  Z.gcd (Z.gcd a b) c = Z.gcd a (Z.gcd b c)
The command has indeed failed with message:
Could not reconstruct abduct
